--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "engines": {
-    "node": "8.1.1",
-    "npm": "5.0.3"
-  },
-  "scripts": {
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/evamaina/StackOverFlow-Node.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/evamaina/StackOverFlow-Node/issues"
-  },
-  "homepage": "https://github.com/evamaina/StackOverFlow-Node#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "engines": {
+        "node": "8.1.1",
+        "npm": "5.0.3"
+    },
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/evamaina/StackOverFlow-Node.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/evamaina/StackOverFlow-Node/issues"
+    },
+    "homepage": "https://github.com/evamaina/StackOverFlow-Node#readme",
+    "dependencies": {
+        "express": "^4.17.1",
+        "nodemon": "^2.0.4",
+        "passport": "^0.4.1",
+        "passport-google-oauth20": "^2.0.0"
+    }
 }
