--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/evamaina/StackOverFlow-Node#readme",
     "dependencies": {
+        "cookie-session": "^1.4.0",
         "express": "^4.17.1",
         "mongoose": "^5.10.0",
         "nodemon": "^2.0.4",
