--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "scripts": {
         "start": "node index.js",
         "server": "nodemon index.js",
-        "client": "npm run start --prefix client",
-        "dev": "concurrently \"npm run server\"  \"npm run client\""
+        "client": "cd client && npm start",
+        "dev": "concurrently --kill-others-on-fail \"npm run server\"  \"npm run client\""
     },
     "repository": {
         "type": "git",
